# RustSan

./: .gitignore  README.md  cargo-rustsan  config.toml
SVF/: .gitignore  build.sh
SVF/include/Graphs/: ICFGEdge.h
SVF/include/MemoryModel/: SVFStatements.h
SVF/include/SVF-FE/: SVFIRBuilder.h
SVF/include/Util/: ExtAPI.json
SVF/lib/Graphs/: VFG.cpp
SVF/lib/MemoryModel/: SymbolTableInfo.cpp
SVF/lib/SVF-FE/: ICFGBuilder.cpp  SVFIRBuilder.cpp
SVF/lib/Util/: ExtAPI.cpp
llvm-project/compiler-rt/lib/: CMakeLists.txt
llvm-project/compiler-rt/lib/asan/: asan_allocator.cpp  asan_allocator.h  asan_errors.cpp  asan_errors.h  asan_interceptors.cpp  asan_interface.inc  asan_interface_internal.h  asan_malloc_linux.cpp  asan_report.cpp  asan_report.h  asan_rtl.cpp  asan_thread.cpp  asan_thread.h
llvm-project/llvm/include/llvm-c/: Core.h
llvm-project/llvm/lib/IR/: Core.cpp  Value.cpp
llvm-project/llvm/lib/Transforms/Instrumentation/: AddressSanitizer.cpp
rust/: .gitignore  .gitmodules  config.toml
rust/compiler/rustc_borrowck/src/diagnostics/: mutability_errors.rs
rust/compiler/rustc_codegen_llvm/src/: builder.rs
rust/compiler/rustc_codegen_llvm/src/llvm/: ffi.rs
rust/compiler/rustc_codegen_ssa/: Cargo.toml
rust/compiler/rustc_codegen_ssa/src/: base.rs  lib.rs  mirutil.rs  pta_filter.rs
rust/compiler/rustc_codegen_ssa/src/mir/: block.rs  mod.rs
rust/compiler/rustc_codegen_ssa/src/traits/: builder.rs
rust/compiler/rustc_const_eval/src/transform/: promote_consts.rs
rust/compiler/rustc_const_eval/src/util/: aggregate.rs
rust/compiler/rustc_middle/src/mir/: mod.rs  patch.rs  visit.rs  (+1 more)
rust/compiler/rustc_mir_dataflow/src/: elaborate_drops.rs
rust/compiler/rustc_mir_transform/src/: abort_unwinding_calls.rs  add_call_guards.rs  add_moves_for_packed_drops.rs  add_retag.rs  early_otherwise_branch.rs  elaborate_drops.rs  generator.rs  inline.rs  instcombine.rs  lib.rs  lower_intrinsics.rs  lower_slice_len.rs  match_branches.rs  mydbg.rs  pass_manager.rs  pta_filter.rs  remove_uninit_drops.rs  shim.rs  simplify.rs  simplify_comparison_integral.rs  uninhabited_enum_branching.rs
rust/compiler/rustc_session/src/: config.rs  options.rs
rust/src/llvm-project/: README.md
src/AnalysisPass/: CMakeLists.txt  Pass.cc
src/analysis/: CMakeLists.txt
src/analysis/src/: CMakeLists.txt  pointer_stable.cc  statistics.cc  statistics.hh
src/compiler-rt/: compiler-rt.c
(+38 files in other folders)
